Changed primitive int to Integer in School model to fix whitelabel issue, developed more html on the template and css this version does work however its very limited and the two html elements are stuck together which i need to fix

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.Banner {
+    border: solid black 2px;
+}
+
 ul {
     padding: 0;
 }
